Bug 697423: Fix overflow in pngalpha.

The composite creation maths in the copy_alpha method overflowed
due to the alpha range being changed from 0..15 to 0..255 in
commit d9f041d6fe7eda89364df1424f85ace974ed0fec. Changing to
unsigned solves this.